fixed Dharma-Gem perspective issue on Firefox desktop

--- a/dharma-gem/src/css/jewel.scss
+++ b/dharma-gem/src/css/jewel.scss
@@ -46,7 +46,7 @@
 			width: var(--dharma-base-dim);
 			height: var(--dharma-base-dim);
 			margin: auto;
-			transform: translate3d(0, -280px, -2000px);
+			transform: translate3d(0, -535px, -5000px);
 
 			&,
 			.jewel {
